--- a/dada/DADA/Template/templates/filter_using_black_list.tmpl
+++ b/dada/DADA/Template/templates/filter_using_black_list.tmpl
@@ -20,7 +20,7 @@
  
 <!-- tmpl_loop name="filtered" -->
 	 
-	 <input type="checkbox" name="address" value="<!-- tmpl_var email escape="HTML" -->" id="<!-- tmpl_var email escape="HTML" -->" checked="checked" />
+	 <input type="checkbox" name="address" value="<!-- tmpl_var email escape="HTML" -->" id="<!-- tmpl_var email escape="HTML" -->;type=<!-- tmpl_var list_type -->" checked="checked" />
 	 &nbsp; 
 	 <label for="<!-- tmpl_var email escape="HTML" -->">
 	  <!-- tmpl_var email -->
