Wrapping everything up for 4.10.0 alpha 1

--- a/dada/DADA/Template/templates/list_download_widget.tmpl
+++ b/dada/DADA/Template/templates/list_download_widget.tmpl
@@ -10,11 +10,11 @@
 		<input type="hidden" name="query" value="<!-- tmpl_var query -->" />
 		<input type="hidden" name="order_by" value="<!-- tmpl_var order_by -->" />
 		<input type="hidden" name="order_dir" value="<!-- tmpl_var order_dir -->" />
-		<input type="submit" class="plain" value="Export Search Results (.csv)" />
+		<input type="submit" class="small_button" value="&#8595; Export Search Results (.csv)" />
 		
 	<!-- tmpl_else --> 
 	
-		<input type="submit" class="small_button" value="Export <!-- tmpl_var type_title --> (.csv)" />
+		<input type="submit" class="small_button" value="&#8595; Export <!-- tmpl_var type_title --> (.csv)" />
 
 	<!-- /tmpl_if --> 
 	
