--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -1,15 +1,16 @@
 <!-- begin edit_subscribed_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Edit Subscriber" -->
+<!-- tmpl_set name="title" value="Address Membership" -->
 
 <!-- tmpl_if done -->
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
 <!--/tmpl_if-->
 
 <p>
- <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list&amp;type=<!-- tmpl_var type -->">
- <!-- tmpl_var type_title -->
- </a> &#187; <!-- tmpl_var email escape="HTML" -->
+Your Subscribers
+ &#187;
+Address Membership
+ &#187; <!-- tmpl_var email escape="HTML" -->
 </p>
 
 
