--- a/dada/DADA/Template/templates/delete_list_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_list_screen.tmpl
@@ -10,7 +10,7 @@
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 	
 <p class="error">
- Are you <em>sure</em> you want to totally delete this list?
+ Are you <em>sure</em> you want to completely this Mailing List?
 </p>
 <p>
  <strong>
