--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -246,7 +246,7 @@ $ADMIN_MENU = [
 			]
 	},
 
-	{-Title      => 'Your Subscribers',
+	{-Title      => 'Membership',
 	 -Activated  => 1,
 	 -Submenu    => [
 					{
