--- a/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_modalmenu_widget.tmpl
@@ -101,7 +101,7 @@
 		
 	<div style="text-align: center;">
 	
-	<input type="button" name="foo" value="Thanks!" onClick="Effect.Fade('alertbox');" />
+	<input type="button" name="foo" class="plain" value="Thanks!" onClick="Effect.Fade('alertbox');" />
 	</div>
 	</div> 
 </div> 
