--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -24,30 +24,59 @@
 	<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
 <!-- /tmpl_if --> 
 
+<style> 
+#titlestuff { 
+	width:100%; 
+	height:25px; 
+	background-color:#cc9999;
+	border-bottom:1px solid #666;
+	color: #fff; 
+	font:  1em "Avant Garde", "Century Gothic", AvantGarde, Helvetica,Verdana,Arial,sans-serif;
+	text-shadow:  1px 1px 2px #330033;
+}
+
+</style> 
+
+
  </head>
  
  <body id="DadaAdmin">
   <div id="AdminPageWrapper">
-   <div id="Header" onclick="location.href='<!-- tmpl_var PROGRAM_URL -->';" style="cursor:pointer;">
-    <span id="Title">
-		<!-- tmpl_var root_login_message --> <!-- tmpl_var title -->
+   <div id="Header">
+	<a href="<!-- tmpl_var PROGRAM_URL -->">
+		<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo_sm.png/" />
+    </a>
+	<span id="Title">
+		Signed in as
+		<!-- tmpl_if root_login --> 
+		 <strong><!-- tmpl_var PROGRAM_NAME --> Root</strong>
+		<!-- tmpl_else --> 
+			List Owner
+		<!-- /tmpl_if -->
+		of 
+		<strong><a href="<!-- tmpl_var PROGRAM_URL -->/list/<!-- tmpl_var list_settings.list -->/" target="_blank"><!-- tmpl_var list_settings.list_name --> (<!-- tmpl_var list_settings.list -->)</a></strong>   
+	 	
+		<!-- tmpl_if login_switch_widget --> 
+			<!-- tmpl_if root_login --> 
+			| 
+				<!-- tmpl_var login_switch_widget -->
+			<!-- /tmpl_if -->
+		<!-- /tmpl_if -->
+		| <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=logout">Sign Out</a>
+		
     </span>
     <div class="floatclear"></div>
-  </div><!-- ends id="Header" --> 
+  </div><!-- ends id="Header" -->
   <div id="AdminContentWrapper">
+
+
    <div id="AdminContent">
- 		<!-- tmpl_var content -->
+		<!-- tmpl_var content -->
    </div><!-- ends id="AdminContent" -->
   </div><!-- ends id="AdminContentWrapper" -->
    
    <div id="MenuWrapper">
-    <div id="Menu">
-     <p>
-      <a href="<!-- tmpl_var PROGRAM_URL -->/list/<!-- tmpl_var list_settings.list -->/" target="_blank">
-	   <!-- tmpl_var list_settings.list_name --> (<!-- tmpl_var list_settings.list -->)
-	 </a>
-     </p>
-     <!-- tmpl_var login_switch_widget -->
+    <div id="Menu">     
      <!-- tmpl_var admin_menu -->
     </div><!-- ends id="Menu" -->
    </div><!-- ends id="MenuWrapper" -->
