--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -1,17 +1,19 @@
 <!-- begin edit_subscribed_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Address Membership" -->
+<!-- tmpl_set name="title" value="Membership" -->
+
+
+<div id="titlestuff"> 
+	<div style="padding:3px;float:left">
+	 	Membership &#187; <!-- tmpl_var email escape="HTML"  -->
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
 
 <!-- tmpl_if done -->
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
 <!--/tmpl_if-->
-
-<p>
-Your Subscribers
- &#187;
-Address Membership
- &#187; <!-- tmpl_var email escape="HTML" -->
-</p>
 
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
