--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -1,7 +1,16 @@
 <!-- begin send_email_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Send a Message" -->
-<!-- tmpl_include help_link_widget.tmpl -->
+<!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Message" -->
+
+
+<div id="titlestuff"> 
+	<div style="padding:3px;float:left">
+	 	<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
+
 
 <!-- tmpl_if list_settings.group_list --> 
     <p class="positive">Discussion List Support is enabled and Discussion List preferences will be honored.
