--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -1,17 +1,18 @@
 <!-- begin view_list_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="View" -->
+<!-- tmpl_set name="title" value="Membership &#187; View" -->
 
-<!-- tmpl_include help_link_widget.tmpl --> 
-
+<div id="titlestuff"> 
+	<div style="padding:3px;float:left">
+		Membership &#187; View
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
 <!-- tmpl_include list_type_switch_widget.tmpl -->
-
-<p>&nbsp;</p> 
-
 
 <!-- tmpl_if comment --> 
 
