--- a/dada/DADA/Template/templates/adv_sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_sending_preferences_screen.tmpl
@@ -1,8 +1,12 @@
 <!-- begin adv_sending_preferences_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Advanced Sending Preferences" -->
-
-<!-- tmpl_include help_link_widget.tmpl -->
+<!-- tmpl_set name="title" value="Mailing Sending &#187; Advanced Sending Preferences" -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 
 
