--- a/dada/DADA/Template/templates/delete_list_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_list_screen.tmpl
@@ -1,9 +1,13 @@
 <!-- begin delete_list_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Delete This Mailing List" -->
+<!-- tmpl_set name="title" value="Your Mailing List &#187; Delete This Mailing List" -->
 
-<!-- tmpl_include help_link_widget.tmpl --> 
-
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 <fieldset> 
 	
