--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -292,14 +292,14 @@ $ADMIN_MENU = [
 	 -Activated  => 1,
 	 -Submenu    => [
 					{
-					-Title      => 'Change List Information',
+					-Title      => 'List Information',
 					-Title_URL  => "$S_PROGRAM_URL?f=change_info",
 					-Function   => 'change_info',
 					-Activated  => 1,
 					},
 
 					{
-					-Title      => 'Change List Password',
+					-Title      => 'List Password',
 					-Title_URL  => "$S_PROGRAM_URL?f=change_password",
 					-Function   => 'change_password',
 					-Activated  => 1,
