--- a/dada/DADA/Template/templates/html_code_screen.tmpl
+++ b/dada/DADA/Template/templates/html_code_screen.tmpl
@@ -1,8 +1,12 @@
 <!-- begin html_code_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Subscription Form HTML" -->
-
-<!-- tmpl_include help_link_widget.tmpl -->
+<!-- tmpl_set name="title" value="Appearance and Templates &#187; Subscription Form HTML" -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 
 <fieldset>
