--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -1,8 +1,13 @@
 <!-- begin mass_mailing_preferences_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Mass Mailing Preferences" -->
+<!-- tmpl_set name="title" value="Mailing Sending &#187; Mass Mailing Preferences" -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
-<!-- tmpl_include help_link_widget.tmpl --> 
 
 
 <!-- tmpl_if done -->
