--- a/dada/DADA/Template/templates/view_archive_screen.tmpl
+++ b/dada/DADA/Template/templates/view_archive_screen.tmpl
@@ -1,6 +1,14 @@
 <!-- begin view_archive_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Manage Archives" -->
+<!-- tmpl_set name="title" value="Message Archives &#187; View Archive" -->
+
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
 
 <p>
  <em>
