--- a/dada/DADA/Template/templates/change_info_screen.tmpl
+++ b/dada/DADA/Template/templates/change_info_screen.tmpl
@@ -1,8 +1,14 @@
-<!-- tmpl_set name="title" value="Change List Information" -->
+<!-- tmpl_set name="title" value="Your Mailing List &#187; List Information" -->
 
 <!-- begin change_info_screen.tmpl -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title -->
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
 
 <!-- tmpl_if done -->
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
