--- a/dada/DADA/Template/templates/change_password_screen.tmpl
+++ b/dada/DADA/Template/templates/change_password_screen.tmpl
@@ -1,9 +1,12 @@
 <!-- begin change_password_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Change List Password" -->
-
-
-<!-- tmpl_include help_link_widget.tmpl -->
+<!-- tmpl_set name="title" value="You Mailing List &#187; List Password" -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div> 
 
 <p>
  After you have changed your Mailing List Password, you will 
