--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -2,14 +2,12 @@
 
 <!-- tmpl_set name="title" value="Membership" -->
 
-
-<div id="titlestuff"> 
-	<div style="padding:3px;float:left">
-	 	Membership &#187; <!-- tmpl_var email escape="HTML"  -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		Membership &#187; <!-- tmpl_var email -->
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-
 
 <!-- tmpl_if done -->
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
