--- a/dada/DADA/Template/templates/edit_template_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_template_screen.tmpl
@@ -1,8 +1,13 @@
 <!-- begin edit_template_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Your Mailing List Template" -->
+<!-- tmpl_set name="title" value="Appearance and Templates &#187; Your Mailing List Template" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 <!-- tmpl_if done -->
 	<!--tmpl_var GOOD_JOB_MESSAGE -->
