--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -1,8 +1,15 @@
 <!-- begin edit_type_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Email Message Templates" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<!-- tmpl_set name="title" value="Appearance and Templates &#187; Email Message Templates" -->
+
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
 
 <!-- tmpl_if done -->
     <!-- tmpl_var GOOD_JOB_MESSAGE -->
