--- a/dada/DADA/Template/templates/feature_set_screen.tmpl
+++ b/dada/DADA/Template/templates/feature_set_screen.tmpl
@@ -1,8 +1,13 @@
 <!-- begin feature_set_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Customize Feature Set" -->
+<!-- tmpl_set name="title" value="Your List Control Panel &#187; Customize Feature Set" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div> 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">  
   
