--- a/dada/DADA/Template/templates/profile_fields.tmpl
+++ b/dada/DADA/Template/templates/profile_fields.tmpl
@@ -1,28 +1,24 @@
 <!-- begin profile_fields.tmpl --> 
 
-<!-- tmpl_set name="title" value="Profile Fields" -->
+<!-- tmpl_set name="title" value="Appearance and Templates &#187; Create a Back Link" -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		Profiles
+		 &#187;
+		<!-- tmpl_if edit_field --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=profile_fields"> 
+			Profile Fields
+			</a>
+			 &#187; 
+		 <!-- tmpl_var field -->
+		<!-- tmpl_else --> 
+			Profile Fields
+		<!-- /tmpl_if -->
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
-<!-- tmpl_include help_link_widget.tmpl --> 
 
-
-<p>
-Profiles
- &#187;
-<!-- tmpl_if edit_field --> 
-
-	<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=profile_fields"> 
-	Profile Fields
-	</a>
-	 &#187; 
-	Edit 
-	&#187;
-
- <strong><!-- tmpl_var field --></strong>
-
-<!-- tmpl_else --> 
-	Profile Fields
-<!-- /tmpl_if -->
-</p>
 
 
 <!-- tmpl_if deletion --> 
@@ -53,9 +49,9 @@ Profiles
 
 <!-- tmpl_if can_have_subscriber_fields --> 
     
-    <p class="alert">
-     Subscriber Profile Fields are global and changing them will affect all lists. You may only change the Subscriber Profile Fields if you are logged in to an existing list using the <!-- tmpl_var PROGRAM_NAME --> Root Password.
-</p>
+	<p class="alert">
+	 Subscriber Profile Fields are global and changing them will affect all Mailing Lists. You may only change the Subscriber Profile Fields if you are logged in to an existing list using the <!-- tmpl_var PROGRAM_NAME --> Root Password.
+	</p>
     
     
     <!-- tmpl_if field_errors --> 
@@ -161,7 +157,7 @@ Profiles
   
 	<div style="max-height: 200px; overflow: auto; border:1px solid black">
 
-	 <table cellpadding="2" cellspacing="0" border="0" width="100%" style="background:#fff">
+	 <table class="stripedtable">
 		  
          <tr> 
                    <!-- tmpl_if root_login --> 
@@ -212,7 +208,7 @@ Profiles
   
 
       
-        <tr <!-- tmpl_if name="__odd__" --> style="background-color:#ccf;"<!--/tmpl_if-->> 
+        <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->> 
 
 	       <!-- tmpl_if root_login --> 
 				
