--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -3,8 +3,8 @@
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Message" -->
 
 
-<div id="titlestuff"> 
-	<div style="padding:3px;float:left">
+<div id="screentitle"> 
+	<div id="screentitlepadding">
 	 	<!-- tmpl_var title --> 
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
