--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -1,8 +1,13 @@
 <!-- begin send_url_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Send a Webpage" -->
+<!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Webpage" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+	 	<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
 
