--- a/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_container_screen.tmpl
@@ -1,7 +1,7 @@
 <!-- begin sending_monitor_container_screen.tmpl --> 
 
 
-<!-- tmpl_set name="title" value="Monitor Your Mailing" -->
+<!-- tmpl_set name="title" value="Mass Mailing &#187; Monitor Your Mailings" -->
 <script type="text/javascript">
     //<![CDATA[
 	Event.observe(window, 'load', function() {
@@ -41,7 +41,12 @@
 </script>
 
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+	 	<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 
 <div id="sending_monitor_ajax"></div> 
