--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -1,19 +1,13 @@
 <!-- begin sending_monitor_index_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Monitor Your Mailings" -->
+<!-- tmpl_set name="title" value="Mass Mailing Monitor &#187; Your Mailings" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
-
-<p>
-
-<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=send_email"> 
- Send a Message 
-</a> 
-
-  &#187;
-
-    Monitor Your Mailings
-</p>
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+	 	<!-- tmpl_var title --> 
+	</div>
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
 
 
 
@@ -44,7 +38,7 @@ Current Mass Mailings:
 <!-- tmpl_if mailout_status --> 
 
  <div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
-    <table cellpadding="2" cellspacing="0" border="0" width="100%">
+    <table class="stripedtable">
      <tr> 
 	
 	
