--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -1,8 +1,13 @@
 <!-- begin subscription_options_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Subscriber Options" -->
+<!-- tmpl_set name="title" value="Membership &#187; Options" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 	
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div> 
 
 <!-- tmpl_if done -->
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
